--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "L&O language support for Atom",
   "keywords": [
   ],
-  "repository": "https://github.com/atom/lo-language",
+  "repository": "https://github.com/fmccabe/lo-language.git",
   "license": "Apache 2.0",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
