--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "lo-language",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "L&O language support for Atom",
-  "keywords": [
-  ],
+  "keywords": [],
   "repository": "https://github.com/fmccabe/lo-language.git",
   "license": "Apache 2.0",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
